--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 							Walking on water and developing software from a specification are easy if both are frozen
 							<small class="quote-author">- Edward V Berard</small>
 						</a>
+						<p style="border: 1px red solid;">Joan Added this</p>
 					</div>
 					<div class="my-details">
 						<ul class="my-meta">
